@@ -55,6 +55,8 @@ Broker:
 - Bridge reconnection backoff improvements.
 - Add bridge_tls_use_os_certs option to allow bridges to be easily configured
   to trust default CA certificates. Closes #2473.
+- Add `--test-config` option which can be used to test a configuration file
+  before trying to use it in a live broker. Closes #2521.
 
 Plugins / plugin interface:
 - Add persist-sqlite plugin.
